--- a/src/MusicPage/index.html
+++ b/src/MusicPage/index.html
@@ -7,6 +7,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
     <title>Mis Cosas y Yo</title>
   </head>
   <body class="bg-custom-cyan">
